<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SongContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicPage">

    <Button
        android:id="@+id/infoButtonMusicPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="@+id/menuMusicPage"
        app:layout_constraintEnd_toStartOf="@+id/menuMusicPage"
        app:layout_constraintTop_toTopOf="@+id/menuMusicPage" />

    <Button
        android:id="@+id/prevSongMusicPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/prev"
        app:layout_constraintBottom_toBottomOf="@+id/infoButtonMusicPage"
        app:layout_constraintEnd_toStartOf="@+id/infoButtonMusicPage"
        app:layout_constraintStart_toStartOf="@+id/toolbarViewSet"
        app:layout_constraintTop_toTopOf="@+id/infoButtonMusicPage" />

    <Button
        android:id="@+id/messageMusicPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/message"
        app:layout_constraintBottom_toBottomOf="@+id/menuMusicPage"
        app:layout_constraintStart_toEndOf="@+id/menuMusicPage"
        app:layout_constraintTop_toTopOf="@+id/menuMusicPage" />

    <Button
        android:id="@+id/nextSongMusicPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/messageMusicPage"
        app:layout_constraintEnd_toEndOf="@+id/toolbarViewSet"
        app:layout_constraintStart_toEndOf="@+id/messageMusicPage"
        app:layout_constraintTop_toTopOf="@+id/messageMusicPage" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarViewSet"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/menuMusicPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarViewSet"
        app:layout_constraintEnd_toEndOf="@+id/toolbarViewSet"
        app:layout_constraintStart_toStartOf="@+id/toolbarViewSet"
        app:layout_constraintTop_toTopOf="@+id/toolbarViewSet" />

    <View
        android:id="@+id/viewMusicPage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="11dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/toolbarViewSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastMessageMusicPage" />


    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfviewerMusicPage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/toolbarViewSet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastMessageMusicPage"/>


    <Button
        android:id="@+id/prevPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prev_page"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/viewMusicPage"
        app:layout_constraintStart_toStartOf="@+id/viewMusicPage" />

    <Button
        android:id="@+id/nextPageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_page"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/viewMusicPage"
        app:layout_constraintEnd_toEndOf="@+id/viewMusicPage" />

    <TextView
        android:id="@+id/currentSongMusicPage"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="11dp"
        android:text="@string/current_song_here"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/viewMusicPage"
        app:layout_constraintEnd_toStartOf="@+id/lastMessageMusicPage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastMessageMusicPage"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/last_message_will_go_here"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/viewMusicPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

</android.support.constraint.ConstraintLayout>